		- Modificato "myproblems"
		- Modificato "ProblemController", ordinata la funzione e ottimizzato codice ripetuto
		- Modificato "myProblemsStyle" e "myProblemsScript"
		- Modificata "navbarTearcher" (valore di default per il timeout impostato a 5)
	- Fixato bug in "contest" per cui non si riusciva a visualizzare i problemi con più di uno spazio
		- Modificato "contest.js" (RegEx in .replace)

11-07-2018
	- Aggiunta possibiltà di vedere le Submit dei Problemi, divise per Team
		- Modicato "ProblemController"
		- Creata "viewProblemSubmits"
	- Aggiunta possibilità di vedere la singola Submit per un Problema, guardando il codice e con la possibilità di scaricarlo
		- Creata "viewSubmit"
		- Utilizzata libreria prismJS
	- Aggiunta possibilità di scaricare le proprie Submit (Student) dalla Home

13-07-2018
	- Creata Vista per il Team, consente al Prof di vedere le Sottomissioni di quel Team per i propri Problemi
		- Modificato "TeamController", "SubmitDAO", "SubmitDAOImpl", "TagDAOImpl"
		- Creata "viewTeam.jsp" (e CSS), modificato "teamviews.jsp", "viewProblemSubmit.jsp" e "viewSubmit.jsp"
	- Aggiunti Submit alla Vista "contest.jsp" dei Problemi
		- Modificato "ProblemController", "contest.jsp"
	- Creata Vista per creare un Quiz
		- Creata "createQuiz.jsp" (JS e CSS)
		
17-07-2018
	- Aggiunta lista di Quiz nella Vista "contest.jsp"
		- Aggiunto Fetch Join per i Quiz
		- Modificati i tipi di questions (in Quiz) e answers in Set

18-07-2018
	- Aggiunto form per la submit dei Quiz nella Vista "contest.jsp"
		- Mappati gli input da passare al form in back-end
		- Cambiato quizName in quizID in "SubmitQuizForm"
	- Fixata LazyInitializationException in QuizDAO (Fetch Join)
	- Fixati bug minori in "QuizController" (due IF confrontavano Nome==ID invece di ID1==ID2)
	
21-07-2018
	- Aggiunto supporto ai Tag per i Quiz
	- Riscritta submit di creazione Quiz
		- Nessuna chiamata Ajax, ora viene utilizzato Spring usando gli stessi nomi per creare delle Liste
	
	
	
	
	