@@ -137,6 +137,8 @@
 	- Aggiunto supporto ai Tag per i Quiz
 	- Riscritta submit di creazione Quiz
 		- Nessuna chiamata Ajax, ora viene utilizzato Spring usando gli stessi nomi per creare delle Liste
+	- Aggiunto form per la generazione di Quiz casuali
+		- Modificato createQuizScript.js per rendere il form dinamico
 	
 	
 	
